<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    tools:context=".editActivity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical">

        <TextView
            android:id="@+id/tvNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtUsuario"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edNombre"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            />

        <TextView
            android:id="@+id/tvContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtContrasenia"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edContrasenia"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />

        <TextView
            android:id="@+id/tvContrasenia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:text="@string/txtContrasenia2"
            android:textSize="20sp"/>

        <EditText
            android:id="@+id/edContrasenia2"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:inputType="textPassword"
            />
    </LinearLayout>


    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <TextView
            android:id="@+id/tvRadio"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:text="@string/txtTipo"
            android:gravity="center"/>

        <RadioGroup
            android:id="@+id/radioTipo"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content">

            <RadioButton
                android:id="@+id/radioAdministrador"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="true"
                android:text="@string/txtAdministradorRb"/>

            <RadioButton
                android:id="@+id/radioUsuario"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:checked="false"
                android:text="@string/txtUsuarioRb"/>
        </RadioGroup>
    </LinearLayout>



    <Button
        android:id="@+id/btnGuardar"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/txtGuardar"
        android:layout_gravity="center_horizontal"
        android:layout_marginTop="100dp"
        android:drawableLeft="@android:drawable/ic_menu_edit"
        android:backgroundTint="@color/grey"
        android:textColor="@color/black"/>

</LinearLayout>